--- a/inicio.css
+++ b/inicio.css
@@ -56,6 +56,7 @@ button{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.1), 0 6px 10px 0 rgba(0,0,0,0.15);
     transition: 0.2s;
     margin: 20px 93px ;
+    padding: 10px;
     width: 164px;
     height: 48px;
     
